<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" 
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_slicer</name>
  <version>0.1.0</version>
  <description>
    Pillar 2: Dynamic Z-Slicer and Z-Supervisor node.
    Converts 3D OctoMap into a 3-channel 2.5D tensor for the DRL agent.
  </description>
  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- OctoMap message types -->
  <depend>octomap_msgs</depend>

  <!-- For reading OctoMap binary data -->
  <depend>octomap_ros</depend>

  <!-- Native OctoMap C++ library (system-level) -->
  <build_depend>octomap</build_depend>
  <exec_depend>octomap</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
